--- a/GreenCharger/src/app/client/components/home/home.component.html
+++ b/GreenCharger/src/app/client/components/home/home.component.html
@@ -26,7 +26,7 @@
       </div>
       
       <div class="categories-grid" *ngIf="!isLoadingCategories && !categoriesError">
-        <div class="category-card" *ngFor="let category of categories" routerLink="/products" [queryParams]="{category: category.id}">
+        <div class="category-card" *ngFor="let category of categories" routerLink="/products" [queryParams]="{category: category.id, page: 1}">
           <div class="category-image">
             <img [src]="getCategoryImageUrl(category)" [alt]="category.name">
           </div>
@@ -58,7 +58,7 @@
       </div>
       
       <div class="products-grid" *ngIf="!isLoadingProducts && !productsError">
-        <div class="product-card" *ngFor="let product of featuredProducts">
+        <a class="product-card" *ngFor="let product of featuredProducts" [routerLink]="['/product', product.id]">
           <div class="product-image">
             <img [src]="getProductImageUrl(product)" [alt]="product.name">
             <div class="product-badge">{{ getProductBadge(product) }}</div>
@@ -79,13 +79,13 @@
               </div>
               <span class="rating-text">({{ product.reviewCount }})</span>
             </div>
-            <button class="add-to-cart-btn">Thêm vào giỏ</button>
+            <button class="add-to-cart-btn" type="button">Thêm vào giỏ</button>
           </div>
-        </div>
+        </a>
       </div>
       
       <div class="section-footer" *ngIf="!isLoadingProducts && !productsError">
-        <a href="/products" class="view-all-btn">Xem tất cả sản phẩm</a>
+        <a routerLink="/products" class="view-all-btn">Xem tất cả sản phẩm</a>
       </div>
     </div>
   </section>
